--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,11 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'io.rest-assured:rest-assured:5.3.1'
-}
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'}
 
 test {
     useJUnitPlatform()
