--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'io.rest-assured:rest-assured:5.3.1'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'}
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+
+}
+
 
 test {
     useJUnitPlatform()
